Added markers to histogram

--- a/utils/parseECHOES.ipynb
+++ b/utils/parseECHOES.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "4a889773-6ad3-43fe-ae99-586902b6889b",
    "metadata": {},
    "outputs": [
@@ -278,25 +278,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "survey_energy_provider: <function ConditionalSurvey.substitute_nan at 0x7fa48703eef0>\n",
+      "survey_energy_provider: <function ConditionalSurvey.substitute_nan at 0x7fcda4e46560>\n",
       "before:(181, 94), after:(181, 94)\n",
-      "int_survey: <function ConditionalSurvey.substitute_nan at 0x7fa48703eef0>\n",
+      "int_survey: <function ConditionalSurvey.substitute_nan at 0x7fcda4e46560>\n",
       "before:(18037, 424), after:(18037, 424)\n",
-      "psych_experiment_Spain: <function ConditionalSurvey.substitute_nan at 0x7fa48703eef0>\n",
+      "psych_experiment_Spain: <function ConditionalSurvey.substitute_nan at 0x7fcda4e46560>\n",
       "before:(302, 52), after:(302, 52)\n",
-      "psych_experiments_Germany_1: <function ConditionalSurvey.substitute_nan at 0x7fa48703eef0>\n",
+      "psych_experiments_Germany_1: <function ConditionalSurvey.substitute_nan at 0x7fcda4e46560>\n",
       "before:(200, 111), after:(200, 111)\n",
-      "psych_experiments_Germany_2: <function ConditionalSurvey.substitute_nan at 0x7fa48703eef0>\n",
-      "before:(208, 132), after:(208, 132)\n",
-      "psych_experiments_Bulgaria: <function ConditionalSurvey.substitute_nan at 0x7fa48703eef0>\n",
+      "psych_experiments_Germany_2: <function ConditionalSurvey.substitute_nan at 0x7fcda4e46560>\n",
+      "before:(208, 132), after:(208, 132)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kalyan/anaconda3/envs/deepl/lib/python3.7/site-packages/ipykernel_launcher.py:52: UserWarning: Tight layout not applied. tight_layout cannot make axes width small enough to accommodate all axes decorations\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "psych_experiments_Bulgaria: <function ConditionalSurvey.substitute_nan at 0x7fcda4e46560>\n",
       "before:(157, 91), after:(157, 91)\n",
-      "psych_experiments_Finland: <function ConditionalSurvey.substitute_nan at 0x7fa48703eef0>\n",
+      "psych_experiments_Finland: <function ConditionalSurvey.substitute_nan at 0x7fcda4e46560>\n",
       "before:(196, 76), after:(196, 76)\n",
-      "psych_experiments_Italy: <function ConditionalSurvey.substitute_nan at 0x7fa48703eef0>\n",
+      "psych_experiments_Italy: <function ConditionalSurvey.substitute_nan at 0x7fcda4e46560>\n",
       "before:(178, 169), after:(178, 169)\n",
-      "psych_experiments_Norway: <function ConditionalSurvey.substitute_nan at 0x7fa48703eef0>\n",
+      "psych_experiments_Norway: <function ConditionalSurvey.substitute_nan at 0x7fcda4e46560>\n",
       "before:(250, 74), after:(250, 74)\n",
-      "psych_experiments_Turkey: <function ConditionalSurvey.substitute_nan at 0x7fa48703eef0>\n",
+      "psych_experiments_Turkey: <function ConditionalSurvey.substitute_nan at 0x7fcda4e46560>\n",
       "before:(211, 107), after:(211, 107)\n"
      ]
     }
@@ -337,6 +350,7 @@
     "            while FIRST_TIME:\n",
     "                try:\n",
     "                    ax.bar(sr_count.keys(), sr_count.values, align='center', color='#607c8e')\n",
+    "                    ax.plot(sr_count.keys(), sr_count.values, marker=\"o\", linestyle=\"\", alpha=0.8, color=\"b\")\n",
     "                    FIRST_TIME = False\n",
     "                except TypeError:\n",
     "                    if FIRST_TIME:\n",
@@ -351,7 +365,8 @@
     "            ax.yaxis.set_tick_params(labelsize=5, labelcolor='r')\n",
     "            ax.set_ylabel('count', fontsize=5, fontweight='bold')\n",
     "            ax.grid(axis='y', alpha=0.75)\n",
-    "\n",
+    "    \n",
+    "    fig.tight_layout(pad=3.0)\n",
     "    plt.savefig(f'{survey_name}.png', bbox_inches='tight')\n",
     "    plt.close()\n",
     "    \n",
